--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,45 +1,45 @@
 <DefaultLayout>
-  <main class="container-fluid">
-    <section class="hero">
-      <div>
-        <p class="eyebrow">Welcome to</p>
-        <h1>simple static site generator</h1>
-      </div>
+  <section class="hero">
+    <div>
+      <h1>this is simple</h1>
+    </div>
 
-      <h2>Congratulations! You've just created a web site and this is the index page.</h2>
-    </section>
+    <h3>Congratulations! You've just created a web site. This is the index page.</h3>
+  </section>
 
-    <section>
-      <div class="grid" style="--pico-grid-column-gap: 4rem">
-        <div>
-          <h4>Tips for getting started:</h4>
-          <ul>
-            <li>Edit the <code>src/pages/index.html</code> file to change this page's content. The page should hot reload automatically after you save.</li>
-            <li>Edit the <code>src/layouts/Default.html</code> file to change the default layout/wrapper.</li>
-            <li>Edit the <code>src/assets/css/custom.css</code> file to change the custom styles. We've made it easy for you to change the <b>brand and accent colors</b> and to <b>import your favorite web fonts</b>.</li>
-            <li>Add a page in <code>src/pages</code> with just <b>markdown</b>. Make sure it has an extension of <code>.md</code>.</li>
-          </ul>
-        </div>
-        <div>
-          <h4>Other fun stuff:</h4>
-          <div class="grid">
-            <div x-data="AlpineJsApp()">
-              <p>This is an AlpineJS component.</p>
-              <p>
-                <button class="secondary" @click="count -= 1">-</button>
-                <span class="number" x-text="count"></span>
-                <button class="secondary" @click="count += 1">+</button>
-              </p>
-              <p>You can build components and micro-apps with AlpineJS.</p>
-            </div>
-            <div id="VanJsContainer"></div>
+  <section>
+    <div class="grid" style="--pico-grid-column-gap: 4rem">
+      <article>
+        <h4>Tips for getting started:</h4>
+        <ul>
+          <li>Edit the <code>src/pages/index.html</code> file to change this page. The page should hot reload automatically after you save.</li>
+          <li>Edit the <code>src/layouts/Default.html</code> file to change the default layout.</li>
+          <li>Edit the <code>src/assets/css/custom.css</code> file to change the custom styles. We've made it easy for you to change the <b>brand and accent colors</b>.</li>
+          <li>Add a page in <code>src/pages</code> with just <b>markdown</b>. Make sure it has an extension of <code>.md</code>.</li>
+        </ul>
+      </article>
+      <article>
+        <h4>Other fun stuff:</h4>
+        <div class="grid">
+          <div x-data="AlpineJsApp()" class="flow">
+            <h6>This is an AlpineJS component.</h6>
+            <p class="flex">
+              <button type="button" @click="count -= 1">-</button>
+              <span class="number" x-text="count"></span>
+              <button type="button" @click="count += 1">+</button>
+            </p>
+            <p>You can build components and micro-apps with AlpineJS.</p>
           </div>
-          <h4>Deploying your site:</h4>
-          <p>Go <a href="deploy.html">here</a> to learn about deploying your site.</a>
+          <div id="VanJsContainer"></div>
         </div>
-      </div>
-    </section>
-  </main>
+      </article>
+      <article>
+        <h4>Deploying your site:</h4>
+        <p>Go <a href="deploy.html">here</a> to learn about deploying your site.</article>
+      </article>
+    </div>
+  </section>
+</DefaultLayout>
 
 <script>
   // AlpineJS
@@ -52,19 +52,21 @@
 
 <script>
   // VanJS component
-  const { button, div, p, span } = van.tags;
+  const { button, div, h6, p, span } = van.tags;
 
   const VanJsComponent = () => {
     const counter = van.state(0);
     return div(
-      p("This is a VanJS component."),
+      { class: "flow" },
+      h6("This is a VanJS component."),
       p(
-        button({ class: "secondary", onclick: () => --counter.val }, "-"),
+        { class: "flex" },
+        button({ type: "button", onclick: () => --counter.val }, "-"),
         span(
-          { class: "number", style: "padding-inline: 0.25rem;" },
+          { class: "number" },
           () => counter.val,
         ),
-        button({ class: "secondary", onclick: () => ++counter.val }, "+"),
+        button({ type: "button", onclick: () => ++counter.val }, "+"),
       ),
       p("You can build components and micro-apps with VanJS."),
     );
