tabluar-nums and remove extra class

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,7 +8,7 @@
   </section>
 
   <section>
-    <div class="grid" style="--pico-grid-column-gap: 4rem">
+    <div class="grid">
       <article>
         <h4>Tips for getting started:</h4>
         <ul>
