Tweak styling for grid, nav, and hero

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,13 +4,13 @@
       <h1>this is simple</h1>
     </div>
 
-    <h3>Congratulations! You've just created a web site. This is the index page.</h3>
+    <h3>Get started by editing <code>src/index.html</code>.</h3>
   </section>
 
   <section>
     <div class="grid">
       <article>
-        <h4>Tips for getting started:</h4>
+        <h4>Tips:</h4>
         <ul>
           <li>Edit the <code>src/pages/index.html</code> file to change this page. The page should hot reload automatically after you save.</li>
           <li>Edit the <code>src/layouts/Default.html</code> file to change the default layout.</li>
